@@ -1,3 +1,8 @@
+2007-02-21  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua/persistence/dbi.scm
+	  Fix misused pass-through symbol instead of :pass-through keyword.
+
 2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Add: src/kahua/server.scm
